Fix Browser compatibility
read description from magicnailgithub.github.io

--- a/_jadefiles/section-about.jade
+++ b/_jadefiles/section-about.jade
@@ -13,4 +13,4 @@ section.about#about
         .arrow-white
         .content-a
           h1 About
-          p With a crew of well-trained and friendly staff members that promise to deliver only the best quality of service to every customer, we offer many great services ranging from regular manicure/pedicure to delux pedicure and acrylic nails for reasonable prices. We guaranteed the best satisfaction and most comfortable environment to all our customers.
+          p With a crew of well-trained and friendly staff members that promise to deliver only the best quality of service to every customer, we offer many great services ranging from regular manicures/pedicures to delux pedicures and acrylic nails at reasonable prices. We guarantee the best satisfaction and most comfortable environment to all our customers.
