--- a/assets/css/3-sections/_home-service.sass
+++ b/assets/css/3-sections/_home-service.sass
@@ -126,6 +126,10 @@ section.service
             width: 100%
             position: absolute
             bottom: 0
+            left: 0
+            right: 0
+            margin-left: auto
+            margin-right: auto
             background: white
 
 
@@ -154,7 +158,7 @@ section.service
         align-items: center
         transition: all 0.3s ease-in-out
         transform: translateX(0)
-        position: absolute
+        //position: absolute
         z-index: 2
         top: 0
         bottom: 0
@@ -180,6 +184,10 @@ section.service
           border-top: 50px solid $about-color
           position: absolute
           top: 0
+          left: 0
+          right: 0
+          margin-left: auto
+          margin-right: auto
 
         .content-s
           width: 100%
