--- a/assets/css/3-sections/_home-about.sass
+++ b/assets/css/3-sections/_home-about.sass
@@ -120,7 +120,7 @@ section.about
         align-items: center
         transition: all 0.3s ease-in-out
         transform: translateX(0)
-        position: absolute
+        //position: absolute
         z-index: 2
         top: 0
         bottom: 0
@@ -146,6 +146,10 @@ section.about
           border-top: 50px solid white
           position: absolute
           top: 0
+          left: 0
+          right: 0
+          margin-left: auto
+          margin-right: auto
 
         .content-a
           width: 100%
