--- a/assets/css/3-sections/_home-contact.sass
+++ b/assets/css/3-sections/_home-contact.sass
@@ -139,7 +139,7 @@ section.contact
         align-items: center
         transition: all 0.3s ease-in-out
         transform: translateX(0)
-        position: absolute
+        //position: relative
         z-index: 2
         //top: 0
         //bottom: 0
@@ -168,6 +168,10 @@ section.contact
           border-top: 50px solid $service-color
           position: absolute
           top: 0
+          left: 0
+          right: 0
+          margin-left: auto
+          margin-right: auto
 
         .content-c
           width: 100%
