Fixed price list
+ Fixed price list in service section
+ Add a note line

--- a/_jadefiles/section-service.jade
+++ b/_jadefiles/section-service.jade
@@ -17,24 +17,25 @@ section.service#service
             h3 Manicure
             .service-name
               .name
-                p Regular polish
+                p Regular
                 p Gel polish
                 p Acrylic full set
               .price
-                p $12
+                p $17
                 p $30
                 p $30
             h3 Waxing
             .service-name
               .name
                 p Eye brows
-                p Body
-                p Lips
+                p Chest/Back
+                p Upper Lip/Chin
               .price
-               p $8
-               p $30
-               p $8
-
+               p $10
+               p $40
+               p $6/$8
+          .ps-note 
+            p *Please contact us for an extensive list
             
 
               
