--- a/assets/css/3-sections/_home-service.sass
+++ b/assets/css/3-sections/_home-service.sass
@@ -239,10 +239,15 @@ section.service
             @media (max-width: 640px)
               width: 60%
 
+          .ps-note
+            margin-top: 10px
+            p
+              font-size: 14px
+
           @media (max-width: 640px)
             h1
               font-size: 50px
-              margin-bottom: 10px
+              margin-bottom: 0px
             p
               font-size: 14px
             h3
